cambie el index por otro para representar mas lo que vimos hoy. Este va a cambiar más adelante

--- a/css/general.css
+++ b/css/general.css
@@ -21,3 +21,9 @@
             color: white;
             text-align: center;
         }
+
+        #nav{
+            background-color: greenyellow;
+            color: white;
+            text-align: center;
+        }
